--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -16,11 +16,15 @@ group vomss://vo.racf.bnl.gov:8443/voms/star star
 #-------------------
 # USER-VO-MAP atlas ATLAS -- 10 -- (usatlas-support-l@lists.bnl.gov)      
 group vomss://voms.cern.ch:8443/voms/atlas usatlas1 
+group vomss://voms2.cern.ch:8443/voms/atlas usatlas1 
 group vomss://voms.cern.ch:8443/voms/atlas/?/atlas/usatlas usatlas3 
+group vomss://voms2.cern.ch:8443/voms/atlas/?/atlas/usatlas usatlas3 
 group vomss://voms.cern.ch:8443/voms/atlas usatlas4 
+group vomss://voms2.cern.ch:8443/voms/atlas usatlas4 
 #-------------------
 # USER-VO-MAP cms CMS -- 11 -- (uscms-ops@fnal.gov)      
 group vomss://voms.cern.ch:8443/voms/cms uscms01
+group vomss://voms2.cern.ch:8443/voms/cms uscms01
 group vomss://voms.fnal.gov:8443/voms/cms uscms01
 #-------------------
 # USER-VO-MAP ligo LIGO -- 12 -- Patrick Brady (patrick@gravity.phys.uwm.edu)    
@@ -91,9 +95,6 @@ group vomss://gryphn.phys.uconn.edu:8443/voms/Gluex gluex
 #-------------------
 #USER-VO-MAP gridunesp GridUNESP - 41 - Sergio Novaes (sergio.novaes@cern.ch)
 group vomss://voms.grid.unesp.br:8443/voms/GridUNESP gridunesp
-#-------------------
-#USER-VO-MAP dayabay DayaBay - 42 - Doug Olson (dlolson@lbl.gov)
-group vomss://voms.lbl.gov:8443/voms/dayabay dayabay
 #-------------------
 #USER-VO-MAP hcc HCC - 43 - David Swanson (dswanson@cse.unl.edu)
 group vomss://hcc-voms.unl.edu:8443/voms/hcc hcc
