--- a/gums.config.template
+++ b/gums.config.template
@@ -106,7 +106,7 @@
 			name='cms'
 			description=''
 			persistenceFactory='mysql'
-			baseUrl='https://voms.fnal.gov:8443/voms/cms'
+			baseUrl='https://voms.cern.ch:8443/voms/cms'
 			sslKey='/etc/grid-security/http/httpkey.pem'
 			sslCertfile='/etc/grid-security/http/httpcert.pem'
 			sslKeyPasswd=''
@@ -326,7 +326,7 @@
 			name='ilc'
 			description=''
 			persistenceFactory='mysql'
-			baseUrl='https://voms.fnal.gov:8443/voms/ilc'
+			baseUrl='https://grid-voms.desy.de:8443/voms/ilc'
 			sslKey='/etc/grid-security/http/httpkey.pem'
 			sslCertfile='/etc/grid-security/http/httpcert.pem'
 			sslKeyPasswd=''
