--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -68,10 +68,6 @@ group vomss://cluster.greatplains.net:8443/voms/gpn gpn
 # USER-VO-MAP compbiogrid CompBioGrid -- 29 -- Fei Gao (fgao@uchc.edu)    
 group vomss://vdvoms.vcell.uchc.edu:8443/voms/CompBioGrid compbiogrid
 #-------------------
-# USER-VO-MAP engage Engage -- 30 -- Mats Rynge (rynge@renci.org)    
-group vomss://osg-engage.renci.org:8443/voms/Engage/ engage
-group vomss://voms.grid.iu.edu:8443/voms/Engage engage
-#-------------------
 # USER-VO-MAP ilc ILC -- 31 -- Lynn Garren (garren@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/ilc ilc
 #-------------------
@@ -155,3 +151,6 @@ group vomss://cclcgvomsli01.in2p3.fr:8443/voms/vo.cta.in2p3.fr vo.cta.in2p3.fr
 #-------------------
 #USER-VO-MAP xenon.biggrid.nl XENON - 62 - Alfio Rizzo (ar3081@columbia.edu)
 group vomss://voms.grid.sara.nl:8443/voms/xenon.biggrid.nl xenon.biggrid.nl
+#-------------------
+#USER-VO-MAP snoplus.snolab.ca snoplus.snolab.ca - 63 - Freija Descamps (fbdescamps@lbl.gov)
+group vomss://voms.gridpp.ac.uk:8443/voms/snoplus.snolab.ca snoplus.snolab.ca
